migrating existing screens to base foundation to remove redundant configuration